--- a/medical-front-end/project/angular.json
+++ b/medical-front-end/project/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "1aadffb8-ab2c-44ca-9077-0e4b07731471"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
